[tool.poetry]
name = "notebook_convert"
version = "0.1.0"
description = ""
authors = ["Pablo Fernandez <fernandezpablo85@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nbconvert = "^5.6.1"
pygit2 = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
pytest = "^5.4.1"
pre-commit = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
